# uast

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  install-for-all-configs.sh  Индивидуальное техническое задание.docx  Общее техническое задание.docx
.github/workflows/: cmake.yml
source/: CMakeLists.txt  catch.hpp  node.cpp  node.h  node_type.h  test-uast.cpp  test_uast.cpp  uast.h  uast_stub.cpp
source/cpp-parser/: CMakeLists.txt  cpp_parser.h  cpp_parser_stub.cpp  test-cpp-parser.cpp  test_cpp_parser.cpp
source/java-parser/: .gitignore  CMakeLists.txt  java_parser.h  java_parser_stub.cpp  settings.gradle  test-java-parser.cpp  test_java_parser.cpp
source/java-parser/app/: build.gradle
source/java-parser/app/src/main/java/parser/: Analyzer.java  App.java  SomeClass.java
source/java-parser/app/src/test/java/parser/: AppTest.java
source/python-parser/: CMakeLists.txt  python_parser.h  python_parser_stub.cpp  test-python-parser.cpp  test_python_parser.cpp
tests/: CMakeLists.txt  reg_test.cpp  stub_entry.cpp  stub_test.cpp
